@@ -30,7 +30,6 @@
 
 static void  s_init_hdml            (hdml_t* hdml, Doc* doc, request_rec* r, device_table* spec);
 
-static char* s_hdml_node_exchange   (hdml_t* doc,  Node* node, int indent);
 
 static char* s_hdml_start_html_tag    (void* pdoc,  Node* node);
 static char* s_hdml_end_html_tag      (void* pdoc,  Node* node);
@@ -389,12 +388,9 @@ chxj_exchange_hdml(request_rec* r,
     /*------------------------------------------------------------------------*/
     s_hdml_count_radio_tag(&hdml, qs_get_root(&doc));
 
-#if 0
-    dst = s_hdml_node_exchange(&hdml, qs_get_root(&doc), 0);
-#else
     chxj_node_exchange(spec,r,(void*)&hdml, &doc, qs_get_root(&doc), 0);
     dst = hdml.out;
-#endif
+
     DBG1(r,"tmp=[%s]", dst);
     qs_all_free(&doc,QX_LOGMARK);
   }
@@ -405,14 +401,6 @@ chxj_exchange_hdml(request_rec* r,
 #ifdef DUMP_LOG
   chxj_dump_out("[dst] CHTML->HDML", hdml.out, hdml.out_len);
 #endif
-  DBG(r, " ");
-#if 0
-  { FILE* fp = fopen("/tmp/erer.log", "a"); 
-    fprintf(fp, "\n============================================\n");
-    fprintf(fp, ">>>%s\n", dst);
-    fclose(fp);}
-#endif
-  DBG(r, " ");
 
   /*--------------------------------------------------------------------------*/
   /* When there is no processing result, former character string is copied    */
@@ -482,369 +470,6 @@ s_init_hdml(hdml_t* hdml, Doc* doc, request_rec* r, device_table* spec)
 
   hdml->form_cnt = apr_time_now();
   hdml->out = qs_alloc_zero_byte_string(r);
-}
-
-/**
- * It is main processing converted from CHTML to HDML. 
- *
- * @param hdml   [i/o] The pointer to the HDML structure at the output
- *                     destination is specified.
- * @param node   [i]   The route node is specified. 
- * @param indent [i]   Depth from the route node is specified. At present, 
- *                     other use doesn't exist. 
- * @return The conversion result is returned. 
- */
-static char*
-s_hdml_node_exchange(hdml_t* hdml, Node* node,  int indent) 
-{
-  Node*         child;
-  Doc*          doc   = hdml->doc; 
-  request_rec*  r     = doc->r;
-
-  for (child = qs_get_child_node(doc,node); 
-       child ; 
-       child = qs_get_next_node(doc,child)) {
-    char* name = qs_get_node_name(doc,child);
-
-    /*----------------------------------------------------------------------*/
-    /* When </ HDML > tag has already been output, it doesn't process it.   */
-    /*----------------------------------------------------------------------*/
-    if (hdml->hdml_end_flag == 1) 
-      continue;
-
-
-    /*------------------------------------------------------------------------*/
-    /* <TEXTARE> (for TEST)                                                   */
-    /*------------------------------------------------------------------------*/
-    if ((*name == 't' || *name == 'T') && strcasecmp(name, "textarea") == 0) {
-      /* @todo XXX ignore */
-    }
-    else
-    /*------------------------------------------------------------------------*/
-    /* <NOBR> (for TEST)                                                      */
-    /*------------------------------------------------------------------------*/
-    if ((*name == 'n' || *name == 'N') && strcasecmp(name, "nobr") == 0) {
-      s_hdml_node_exchange (hdml, child, indent+1);
-    }
-    else
-    /*------------------------------------------------------------------------*/
-    /* <PRE> (for TEST)                                                       */
-    /*------------------------------------------------------------------------*/
-    if ((*name == 'p' || *name == 'P') && strcasecmp(name, "pre") == 0) {
-      s_hdml_node_exchange (hdml, child, indent+1);
-    }
-    else
-    /*------------------------------------------------------------------------*/
-    /* <P> (for TEST)                                                         */
-    /*------------------------------------------------------------------------*/
-    if ((*name == 'p' || *name == 'P') && strcasecmp(name, "p") == 0) {
-      s_hdml_node_exchange (hdml, child, indent+1);
-    }
-    else
-    /*------------------------------------------------------------------------*/
-    /* <UL> (for TEST)                                                        */
-    /*------------------------------------------------------------------------*/
-    if ((*name == 'u' || *name == 'U') && strcasecmp(name, "ul") == 0) {
-      s_hdml_node_exchange (hdml, child, indent+1);
-    }
-    /*------------------------------------------------------------------------*/
-    /* <LI> (for TEST)                                                        */
-    /*------------------------------------------------------------------------*/
-    else
-    if ((*name == 'l' || *name == 'L') && strcasecmp(name, "li") == 0) {
-      s_hdml_start_li_tag(hdml, child);
-      s_hdml_node_exchange (hdml, child, indent+1);
-      s_hdml_end_li_tag(hdml, child);
-    }
-    else
-    if (*name == 'h' || *name == 'H') {
-      /*----------------------------------------------------------------------*/
-      /* <HTML>                                                               */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "html") == 0) {
-        hdml->out = s_hdml_start_html_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_html_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <HEAD>                                                               */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "head") == 0) {
-        hdml->out = s_hdml_start_head_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_head_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <HR>                                                                 */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "hr") == 0) {
-        hdml->out = s_hdml_start_hr_tag(hdml, child);
-        hdml->out = s_hdml_end_hr_tag(hdml, child);
-      }
-    }
-    /*------------------------------------------------------------------------*/
-    /* <META>                                                                 */
-    /*------------------------------------------------------------------------*/
-    else
-    if ((*name == 'm' || *name == 'M') && strcasecmp(name, "meta") == 0) {
-      hdml->out = s_hdml_start_meta_tag(hdml, child);
-      hdml->out = s_hdml_end_meta_tag(hdml, child);
-    }
-    else
-    if (*name == 'b' || *name == 'B') {
-      /*----------------------------------------------------------------------*/
-      /* <BASE>                                                               */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "base") == 0) {
-        hdml->out = s_hdml_start_base_tag(hdml, child);
-        hdml->out = s_hdml_end_base_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <BODY>                                                               */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "body") == 0) {
-        hdml->out = s_hdml_start_body_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_body_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <BR>                                                                 */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "br") == 0) {
-        hdml->out = s_hdml_start_br_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_br_tag(hdml, child);
-      }
-    }
-    /*------------------------------------------------------------------------*/
-    /* <A>                                                                    */
-    /*------------------------------------------------------------------------*/
-    else
-    if ((*name == 'a' || *name == 'A') && strcasecmp(name, "a") == 0) {
-      hdml->out = s_hdml_start_a_tag(hdml, child);
-      hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-      hdml->out = s_hdml_end_a_tag(hdml, child);
-    }
-    else
-    if (*name == 'f' || *name == 'F') {
-      /*----------------------------------------------------------------------*/
-      /* <FONT>                                                               */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "font") == 0) {
-        hdml->out = s_hdml_start_font_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_font_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <FORM>                                                               */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "form") == 0) {
-        hdml->out = s_hdml_start_form_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_form_tag(hdml, child);
-      }
-    }
-    else
-    if (*name == 'i' || *name == 'I') {
-      /*----------------------------------------------------------------------*/
-      /* <INPUT>                                                              */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "input") == 0) {
-        hdml->out = s_hdml_start_input_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_input_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <IMG>                                                                */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "img") == 0) {
-        hdml->out = s_hdml_start_img_tag(hdml, child);
-        hdml->out = s_hdml_end_img_tag  (hdml, child);
-      }
-    }
-    else
-    if (*name == 's' || *name == 'S') {
-      /*----------------------------------------------------------------------*/
-      /* <SELECT>                                                             */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "select") == 0) {
-        hdml->out = s_hdml_start_select_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_select_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <STYLE> (for TEST)                                                   */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "style") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <SPAN> (for TEST)                                                    */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "span") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-    }
-    /*------------------------------------------------------------------------*/
-    /* <OPTION>                                                               */
-    /*------------------------------------------------------------------------*/
-    else
-    if ((*name == 'o' || *name == 'O') && strcasecmp(name, "option") == 0) {
-      hdml->out = s_hdml_start_option_tag(hdml, child);
-      hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-      hdml->out = s_hdml_end_option_tag(hdml, child);
-    }
-    /*------------------------------------------------------------------------*/
-    /* <DIV>                                                                  */
-    /*------------------------------------------------------------------------*/
-    else
-    if ((*name == 'd' || *name == 'D') && strcasecmp(name, "div") == 0) {
-      hdml->out = s_hdml_start_div_tag(hdml, child);
-      hdml->out = s_hdml_node_exchange(hdml, child, indent+1);
-      hdml->out = s_hdml_end_div_tag(hdml, child);
-    }
-    else
-    if (*name == 'c' || *name == 'C') {
-      /*----------------------------------------------------------------------*/
-      /* <CENTER>                                                             */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "center") == 0) {
-        hdml->out = s_hdml_start_center_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_center_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <CHXJ:IF>                                                            */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "chxj:if") == 0) {
-        DBG(r,"chxj:if tag found");
-        if (chxj_chxjif_is_mine(hdml->spec, doc, child)) {
-          DBG(r,"chxj:if tag is mine");
-          char* parse_attr = NULL;
-  
-          parse_attr = qs_get_parse_attr(doc, child, r);
-          if (parse_attr && strcasecmp(parse_attr, "true") == 0) 
-            hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-          else
-            s_hdml_chxjif_tag(hdml, child);
-        }
-      }
-    }
-    else
-    if (*name == 't' || *name == 'T') {
-      /*----------------------------------------------------------------------*/
-      /* <TITLE>                                                              */
-      /*----------------------------------------------------------------------*/
-      if (strcasecmp(name, "title") == 0) {
-        hdml->out = s_hdml_start_title_tag(hdml, child);
-        hdml->out = s_hdml_node_exchange(hdml, child,indent+1);
-        hdml->out = s_hdml_end_title_tag(hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <TABLE> (for TEST)                                                   */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "table") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <TBODY> (for TEST)                                                   */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "tbody") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <TH> (for TEST)                                                      */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "th") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <TR> (for TEST)                                                      */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "tr") == 0) {
-        s_hdml_start_tr_tag  (hdml, child);
-        s_hdml_node_exchange (hdml, child,indent+1);
-        s_hdml_end_tr_tag    (hdml, child);
-      }
-      /*----------------------------------------------------------------------*/
-      /* <TD> (for TEST)                                                      */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "td") == 0) {
-        s_hdml_node_exchange (hdml, child, indent+1);
-      }
-      /*----------------------------------------------------------------------*/
-      /* NORMAL TEXT                                                          */
-      /*----------------------------------------------------------------------*/
-      else
-      if (strcasecmp(name, "text") == 0) {
-        char* textval;
-        char* tmp;
-        char* tdst;
-        char one_byte[2];
-        int ii;
-        int tdst_len = 0;
-  
-        textval = qs_get_node_value(doc,child);
-        textval = qs_trim_string(r, textval);
-        if (strlen(textval) == 0)
-          continue;
-  
-        if (hdml->option_flag == 1) 
-          continue;
-  
-        tmp = apr_palloc(r->pool, qs_get_node_size(doc,child)+1);
-        memset(tmp, 0, qs_get_node_size(doc,child)+1);
-        tdst = apr_palloc(r->pool, 1);
-        tdst[0] = '\0';
-        one_byte[0] = '\0';
-        one_byte[1] = '\0';
-  
-        for (ii=0; ii<qs_get_node_size(doc,child); ii++) {
-          char* out;
-          int rtn = s_hdml_search_emoji(hdml, &textval[ii], &out);
-          if (rtn) {
-            tdst = qs_out_apr_pstrcat(r, tdst, out, &tdst_len);
-            ii += (rtn-1);
-            continue;
-          }
-          if (is_sjis_kanji(textval[ii])) {
-            one_byte[0] = textval[ii+0];
-            tdst = qs_out_apr_pstrcat(r, tdst, one_byte, &tdst_len);
-            one_byte[0] = textval[ii+1];
-            tdst = qs_out_apr_pstrcat(r, tdst, one_byte, &tdst_len);
-            ii++;
-          }
-          else 
-          if (textval[ii] != '\r' && textval[ii] != '\n') {
-            one_byte[0] = textval[ii+0];
-            tdst = qs_out_apr_pstrcat(r, tdst, one_byte, &tdst_len);
-          }
-        }
-        memcpy(tmp, textval, strlen(textval)-1);
-  
-        s_hdml_tag_output_upper_half(hdml, node);
-        s_output_to_hdml_out(hdml, tdst);
-        hdml->hdml_br_flag = 0;
-      }
-    }
-  }
-  hdml->out[hdml->out_len] = 0;
-
-  return hdml->out;
 }
 
 static int
