@@ -4,6 +4,7 @@ libapache2-mod-chxj (0.6.3-1) unstable; urgency=low
     the image conversion is requested is returned. 
   * change to acquire it even if the extension is attached by the image acquisition 
     request.
+  * bug fix into which the submit value had not converted the character-code for HDML. 
 
  -- Atsushi Konno <konn@users.sourceforge.jp>  Mon, 19 Jun 2006 17:29:48 +0900
 
